--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,6 +33,10 @@ h2{
   color: var(--dark-text-color);
   font-weight: normal;
 }
+h3{
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+}
 
 p{
   color: var(--light-text-color);
@@ -96,4 +100,32 @@ p{
   height: 70%;
   border-radius: 50%;
   border: 1px solid var(--transparant-blue);
+}
+
+.section-style{
+  /* border: 1px solid yellow; */
+  padding: var(--div-padding) ;
+}
+.content-box-container{
+  /* border: 1px solid blue; */
+  width: var(--div-width);
+  margin: var(--div-margin);
+}
+.content-box{
+  /* border: 1px solid red; */
+}
+
+.content-box h2{
+  position: relative;
+  margin-bottom: var(--h2-margin-bottom);
+  padding-bottom: 1rem;
+}
+
+.content-box h2::before{
+  position: absolute;
+  content: '';
+  width: 3rem;
+  bottom: 0;
+  background: yellow;
+  border-bottom: 6px solid var(--yellow-color);
 }
