--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+
 body{
   --main-color: rgba(43, 108, 163, 1);
   --green-color: rgba(75, 209, 160, 1); 
@@ -41,6 +42,11 @@ h3{
 p{
   color: var(--light-text-color);
   margin-bottom: 2rem;
+}
+
+li{
+  text-decoration: none;
+  list-style: none;
 }
 
 .sub-title{
