--- a/client/src/component/Navigation/Navigation.css
+++ b/client/src/component/Navigation/Navigation.css
@@ -1,9 +1,14 @@
 .navigation{
     /* border: 1px solid red; */
+    top: 0;
+    width: 100vw;
     height: 6vh;
     min-height: 60px;
     display: flex;
     align-items: center;
+    position: fixed;
+    z-index: 2;
+    background: white;
 }
 .nav-bar{
     /* border: 1px solid blue; */
