--- a/client/src/component/Showcase/Showcase.css
+++ b/client/src/component/Showcase/Showcase.css
@@ -8,6 +8,7 @@
     background: url(../../images/showcaseimg.jpg) no-repeat center center /cover;
     position: relative;
     z-index: 1;
+    margin-top: 9vh;
 }
 .showcase::before{
     position: absolute;
