--- a/client/src/component/Navigation/Navigation.css
+++ b/client/src/component/Navigation/Navigation.css
@@ -2,9 +2,11 @@
     /* border: 1px solid red; */
     top: 0;
     width: 100vw;
-    height: 6vh;
-    min-height: 60px;
+    height: 9vh;
+    min-height: var(--nav-height);
+    max-height: var(--nav-height);
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     position: fixed;
     z-index: 2;
@@ -13,15 +15,19 @@
 .nav-bar{
     /* border: 1px solid blue; */
     display: grid;
-    grid-template-columns: 1fr .3fr .3fr;
+    grid-template-columns: 1fr 5rem 8rem;
+    justify-content: center;
     align-items: center;
-    width: var(--div-width);
-    width: 100%;
+    width: 95%;
     height: 100%;
-    margin: var(--div-margin);
+    /* margin: var(--div-margin); */
 }
 .logo strong{
     font-size: 1.8rem;
+}
+.nav-links{
+    display: none;
+    /* border: 2px solid purple; */
 }
 .menu{
     width: 2rem;
