--- a/client/src/component/Showcase/Showcase.css
+++ b/client/src/component/Showcase/Showcase.css
@@ -1,30 +1,44 @@
 .showcase{
     /* border: 1px solid blue; */
-    height: 35vh;
+    height: 70vh;
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    background: url(../../images/showcaseimg.jpg) no-repeat center center /cover;
     position: relative;
     z-index: 1;
-    margin-top: 9vh;
+    margin-top: var(--nav-height);
 }
-.showcase::before{
+.showcase-img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../../images/showcaseimg.jpg) no-repeat center center /cover;
+    z-index: -1;
+}
+.showcase-img::before{
     position: absolute;
     content: '';
     width: 100%;
     height: 100%;
-    background: rgba(68, 71, 95, 0.479);
+    /* background: rgba(68, 71, 95, 0.479); */
     /* background: rgba(0, 85, 255, 0.13); */
     z-index: -1;
 }
+
 .showcase-content{
     /* border: 1px solid red; */
     text-align: center;
     height: min-content;
     width: var(--div-width);
+    max-width: 710px;
     margin: var(--div-margin);
+    background-color: rgba(43, 109, 163, 0.863);
+    padding: 3rem;
+}
+
+.showcase-content .sub-title{
+    color: var(--green-color);
 }
 
 .showcase-content h1{
