--- a/client/src/component/Join-us/JoinUs.css
+++ b/client/src/component/Join-us/JoinUs.css
@@ -2,7 +2,7 @@
     background-color: var(--main-color);
 }
 .join-us-form{
-    max-width: 420px;
+    /* max-width: 420px; */
     margin: 0rem auto;
 }
 .join-us-form h2{
