--- a/client/src/Mobile.css
+++ b/client/src/Mobile.css
@@ -11,11 +11,8 @@
     display: flex !important;
     justify-content: center;
     align-items: center;
-    margin-right: 2rem;
   }
-  .nav-links li {
-    margin: 0rem 1rem;
-  }
+
   .menu {
     display: none !important ;
   }
@@ -135,6 +132,9 @@
 }
 
 @media (min-width: 950px) {
+  .showcase{
+    background: transparent !important;
+  }
   .showcase-box-container {
     /* border: 1px solid red; */
     position: absolute;
@@ -144,12 +144,16 @@
     justify-content: flex-start;
   }
   .showcase-img {
+    display: block !important;
     position: absolute !important;
-    top: -7rem;
-    right: -4rem;
+    top: -4rem !important;
+    right: -4rem !important;
+    left: auto !important;
     width: 60% !important;
-    height: 60vh !important;
+    height: 140% !important;
     box-shadow: 10px 10px 30px rgba(32, 32, 32, 0.418);
+    max-height: 600px;
+
   }
   .showcase-img::before {
     position: absolute !important;
@@ -214,12 +218,11 @@
     display: flex !important;
     justify-content: center;
     align-items: center;
-    margin-right: 2rem;
     place-self: center;
   }
-  .nav-links li {
+  /* .nav-links li {
     margin: 0rem 2rem;
-  }
+  } */
   .menu {
     display: none !important ;
   }
