--- a/client/src/component/Our-mission/OurMission.css
+++ b/client/src/component/Our-mission/OurMission.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-top: 0 !important;
+    margin-top: 0;
 
 }
 
