--- a/client/src/component/Showcase/Showcase.css
+++ b/client/src/component/Showcase/Showcase.css
@@ -1,33 +1,39 @@
 .showcase {
-  /* border: 1px solid blue; */
   height: 70vh;
+  min-height: 560px;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  /* z-index: 1; */
+  z-index: 0;
   margin-top: var(--nav-height);
+  background: url(../../images/showcaseimg.jpg) no-repeat center center / cover;
 }
 .showcase-img {
-  position: absolute;
-  width: 100%;
-  max-width: 800px;
+  position: absolute;  
+  top: 0;
+  left: 0;
+  width: 100% ;
   height: 100%;
-  max-height: 600px;
   background: url(../../images/showcaseimg.jpg) no-repeat center right / cover;
-  /* z-index: -1; */
+  display: none;
+ 
 }
-
+.showcase-content-box{
+    z-index: 2;
+}
 .showcase-content {
   /* border: 1px solid red; */
+  
   text-align: center;
   height: min-content;
   width: var(--div-width);
   max-width: 710px;
   margin: var(--div-margin);
-  background-color: rgba(43, 109, 163, 0.863);
+  background-color: rgba(43, 109, 163, 0.692);
   padding: 3rem;
+  z-index: 2 !important;
 }
 
 .showcase-content .sub-title {
@@ -41,4 +47,9 @@
 }
 .showcase-content p {
   color: white;
+}
+
+.circle-for-showcase{
+    bottom: -2rem;
+    
 }
