--- a/client/src/component/Footer/Footer.css
+++ b/client/src/component/Footer/Footer.css
@@ -22,3 +22,18 @@
     font-size: .8rem;
     color: rgba(255, 255, 255, 0.575);
 }
+
+.social-media-list{
+   display: flex;
+}
+
+.social-media-list li i{
+    font-size: 1.5rem;
+    margin-right: 1rem;
+    transition: color .3s ease-in-out;
+    cursor: pointer;
+}
+
+.social-media-list li i:hover{
+    color: rgba(255, 255, 255, 0.568);
+}
