--- a/client/src/Mobile.css
+++ b/client/src/Mobile.css
@@ -13,13 +13,12 @@
     align-items: center;
   }
 
-  .logo{
+  .logo {
     /* border: 1px solid red; */
-     width: 145px !important;
+    width: 145px !important;
     height: 60px !important;
     cursor: pointer;
-}
-  
+  }
 
   .menu {
     display: none !important ;
@@ -95,11 +94,11 @@
   .news {
     width: 30%;
   }
-  .page-grid-container{
+  .page-grid-container {
     grid-template-columns: 1.5fr 1fr !important;
   }
-  .about-page-img{
-    display: flex !;
+  .about-page-img {
+    display: flex !important;
   }
   .footer-box-container {
     /* border: 1px solid red; */
@@ -145,7 +144,7 @@
 }
 
 @media (min-width: 950px) {
-  .showcase{
+  .showcase {
     background: transparent !important;
   }
   .showcase-box-container {
@@ -166,7 +165,6 @@
     height: 140% !important;
     box-shadow: 10px 10px 30px rgba(32, 32, 32, 0.418);
     max-height: 600px;
-
   }
   .showcase-img::before {
     position: absolute !important;
