--- a/client/src/component/Showcase/Showcase.css
+++ b/client/src/component/Showcase/Showcase.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 100% ;
   height: 100%;
-  background: url(../../images/showcaseimg.jpg) no-repeat center right / cover;
+  background: url(../../images/showcaseimg2.jpg) no-repeat center right / cover;
   display: none;
  
 }
