--- a/client/src/component/What-we-do/WhatWeDo.css
+++ b/client/src/component/What-we-do/WhatWeDo.css
@@ -1,58 +1,72 @@
-.what-we-do{
-    /* border: 1px solid yellow; */
-    padding-top: .5rem !important;
+.what-we-do {
+  /* border: 1px solid yellow; */
+  padding-top: 0.5rem !important;
+  position: relative;
+}
+
+.what-we-do-showcase {
+  /* border: 1px solid red; */
+  display: grid;
+  grid-template-rows: repeat(1fr, 3);
+  row-gap: 2rem;
+  justify-content: center;
+  margin: 2rem 0rem;
+  margin-top: 0rem;
+  height: min-content;
+}
+.box {
+  /* border: 2px solid green; */
+  /* height: 25rem; */
+  display: flex;
+  align-items: flex-end;
+  /* max-width: 422px; */
+}
+.box-content {
     position: relative;
+  border: 2px solid var(--background-blue);
+  border-radius: 10px;
+  /* background-color: var(--background-blue); */
+  background-color: transparent;
+  width: 100%;
+  text-align: left;
+  padding: 3rem 2rem;
+  z-index: 0 !important;
+}
+.box-content h3 {
+  color: var(--dark-text-color);
+}
+.showcase-mini-text {
+  color: var(--green-color);
+  font-weight: bold;
 }
 
-.what-we-do-showcase{
-    /* border: 1px solid red; */
-    display: grid;
-    grid-template-rows: repeat(1fr, 3);
-    row-gap: 2rem;
-    justify-content: center;
-    margin: 2rem 0rem;
-    margin-top: 0rem;
-    height: min-content;
-}
-.box{
-    /* border: 2px solid green; */
-    /* height: 25rem; */
-    display: flex;
-    align-items: flex-end;
-    /* max-width: 422px; */
-}
-.box-content{
-    border: 2px solid  var(--background-blue);
-    border-radius: 10px;
-    /* background-color: var(--background-blue); */
-    background-color: transparent;
-    width: 100%;
-    text-align: left;
-    padding: 3rem 2rem;
-    z-index: 0 !important;
-}
-.box-content h3{
-    color: var(--dark-text-color);
-}
-.showcase-mini-text{
-    color: var(--green-color);
-    font-weight: bold;
+.box-content p {
+  color: var(--light-text-color);
+  margin: 0;
 }
 
-.box-content p{
-    color: var(--light-text-color);
-    margin: 0;
+.showcase-1 {
+  /* background: url(../../images/student3.jpg) no-repeat center center/cover; */
+  background: transparent;
+}
+.showcase-2 {
+  /* background: url(../../images/student1.jpg) no-repeat center center/cover; */
+  background: transparent;
+}
+.showcase-3 {
+  /* background: url(../../images/team2.jpg) no-repeat center center/cover; */
+  background: transparent;
 }
 
-.showcase-1{
-    /* background: url(../../images/student3.jpg) no-repeat center center/cover; */
-    background: transparent
-}
-.showcase-2{
-    /* background: url(../../images/student1.jpg) no-repeat center center/cover; */
-    background: transparent
-}
-.showcase-3{
-    /* background: url(../../images/team2.jpg) no-repeat center center/cover; */
-    background: transparent
+.mickey{
+    border: 2px solid var(--background-blue);
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0rem auto;
+    top: -40px;
+    padding: .5rem;
+    background: white;
+    border-radius: 15px;
+    color: red;
 }
