--- a/client/src/component/Donation/Donation.css
+++ b/client/src/component/Donation/Donation.css
@@ -1,228 +1,289 @@
-.donation{
-    background-color: white;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed ;
-     top: 0px ;
-     z-index: 20;
-     width: 95%;
-     height: 95%;
-     max-height: 700px;
-     max-width: 557px;
-     top: 0;
-     bottom: 0;
-     left: 0;
-     right: 0;
-     margin: auto;
-     /* transform: translate(0%, 15%); */
-     animation: donationOn .5s ease-in-out;
-     padding: 2rem 1rem;
+.donation {
+  background-color: white;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  z-index: 20;
+  width: 95%;
+  height: 99%;
+  max-height: 750px;
+  max-width: 557px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  /* transform: translate(0%, 15%); */
+  animation: donationOn 0.5s ease-in-out;
+  padding: 2rem 1rem;
 }
 @keyframes donationOn {
-    0%{
-        transform: scale(0);
-    }
-    100%{
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
-.Field{
-    max-width: 390px;
+.Field {
+  max-width: 390px;
 }
-.top-section{
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
+.top-section {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
 }
-.close-btn{
-    cursor: pointer;
-    font-weight: lighter;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.5rem;
-    transform: rotate(45deg);
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    margin-right: 8px;
-    margin-top: 5px;
-    color: var(--light-text-color) ;
-    transition: background-color .3s ease-in-out;
-}
-
-.close-btn:hover{
-    background-color: silver;
+.close-btn {
+  cursor: pointer;
+  font-weight: lighter;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  transform: rotate(45deg);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
+  margin-top: 5px;
+  color: var(--light-text-color);
+  transition: background-color 0.3s ease-in-out;
 }
 
-.header-section{
-    text-align: center;
-    border-bottom: 1px solid rgba(192, 192, 192, 0.425);
-    margin-bottom: 1.3rem;
+.close-btn:hover {
+  background-color: silver;
+}
+
+.header-section {
+  text-align: center;
+  border-bottom: 1px solid rgba(192, 192, 192, 0.425);
+  margin-bottom: 1.3rem;
 }
 .header-section h3 {
-    margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 .header-section p {
-    font-size: .7rem;
-    margin-bottom: 1rem;
+  font-size: 0.7rem;
+  margin-bottom: 1rem;
 }
 
-.block{
-    /* border: 1px solid red; */
-    margin-bottom: .8rem;
-    display: grid;
-    position: relative;
-    
+.block {
+  /* border: 1px solid red; */
+  margin-bottom: 0.8rem;
+  display: grid;
+  position: relative;
 }
-.block h4{
-    margin-bottom: .6rem;
+.block h4 {
+  margin-bottom: 0.6rem;
 }
-.block p{
-    font-size: .7rem;
-    margin-bottom: .5rem;
+.block p {
+  font-size: 0.7rem;
+  margin-bottom: 0.5rem;
 }
-.block strong{
-    font-size: .7rem;
+.block strong {
+  font-size: 0.7rem;
 }
-.block input{
-    width: 100%;
-    border: 2px solid rgba(192, 192, 192, 0.63);
-    padding: .5rem 1.5rem;
-    border-radius: 5px;
-   cursor: pointer;
-   margin-right: 1rem;
-   margin-bottom: 1rem;
+.block input {
+  width: 100%;
+  border: 2px solid rgba(192, 192, 192, 0.63);
+  padding: 0.5rem 1.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
 }
-.cards-logo{
-    width: 100px;
-    height: 20px;
-    background: url(../../images/payment.png) no-repeat center center/cover;
-    margin-bottom: 5px ;
+.cards-logo {
+  width: 100px;
+  height: 20px;
+  background: url(../../images/payment.png) no-repeat center center/cover;
+  margin-bottom: 5px;
 }
-.block-button-container{
-    display: flex;
-     flex-flow: wrap;
+.block-button-container {
+  display: flex;
+  flex-flow: wrap;
 }
-.block-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: min-content;
-    border: 2px solid rgba(192, 192, 192, 0.63);
-    padding: .5rem .8rem;
-    border-radius: 5px;
-   cursor: pointer;
-   margin-right: 1rem;
-   margin-bottom: 1rem;
+.block-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: min-content;
+  border: 2px solid rgba(192, 192, 192, 0.63);
+  padding: 0.5rem 0.8rem;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
 }
-.card-icon{
-    width: 25px;
-    height: 20px;
-    margin-right: .5rem;
+.card-icon {
+  width: 25px;
+  height: 20px;
+  margin-right: 0.5rem;
 }
-#paypal-logo{  
-    background: url(../../images/paypal.png) no-repeat center center/cover;
-    z-index: -1;
+#paypal-logo {
+  background: url(../../images/paypal.png) no-repeat center center/cover;
+  z-index: -1;
 }
-#cash-app-logo{  
-    background: url(../../images/cashapp.png) no-repeat center center/cover;
-    z-index: -1;
-}
-
-.selected-btn{
-    border: 2px solid var(--main-color) !important;
-    background: rgba(43, 109, 163, 0.356);
-    transition: all .2s ease-in-out;
+#cash-app-logo {
+  background: url(../../images/cashapp.png) no-repeat center center/cover;
+  z-index: -1;
 }
 
-.block-price{
-    border: 2px solid var(--main-color);
-    color: var(--main-color);
+.selected-btn {
+  border: 2px solid var(--main-color) !important;
+  background: rgba(43, 109, 163, 0.356);
+  transition: all 0.2s ease-in-out;
 }
 
-.at{
-    min-width: 118px;
+.block-price {
+  border: 2px solid var(--main-color);
+  color: var(--main-color);
 }
 
-.navigation-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem 0rem;
+.at {
+  min-width: 118px;
 }
 
-.next-button{
-    background: var(--main-color);
-    color: white;
-    width: 8rem;
-    padding: .5rem 0rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border: 2px solid var(--main-color) ;
-    border-radius: 5px;
-}
-.back-button{
-    border: 2px solid var(--main-color) ;
-    background: white;
-    color: var(--main-color);
-    margin-right: 1rem;
+.navigation-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0rem;
 }
 
-.s-button{
-    border: 2px solid var(--green-color) ;
-    background: var(--green-color);
-    color: white;
+.submit-button {
+  background: var(--green-color) !important;
+  border: 2px solid var(--green-color) !important ;
 }
 
-.address-boxx{
-    display: flex;
-    /* flex-flow: wrap; */
+.next-button {
+  background: var(--main-color);
+  color: white;
+  width: 8rem;
+  padding: 0.5rem 0rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 2px solid var(--main-color);
+  border-radius: 5px;
+}
+.back-button {
+  border: 2px solid var(--main-color);
+  background: white;
+  color: var(--main-color);
+  margin-right: 1rem;
+}
+
+.s-button {
+  border: 2px solid var(--green-color);
+  background: var(--green-color);
+  color: white;
+}
+
+.address-boxx {
+  display: flex;
+  /* flex-flow: wrap; */
 }
 
 .address-boxx input:nth-child(3),
-.address-boxx input:nth-child(4)
-{
-    width: 45.4%;
+.address-boxx input:nth-child(4) {
+  width: 45.4%;
 }
 
-.c-input{
-    
-    z-index: 1;
-    position: relative;
+.c-input {
+  z-index: 1;
+  position: relative;
 }
 
-.c-input .custom-input{
+.c-input .custom-input {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 0;
+}
+.c-input::before {
+  position: absolute;
+  content: "$";
 
-    position: relative;
-    z-index: 1;
-    margin-bottom: 0;
-}
-.c-input::before{
-    position: absolute;
-    content: '$';
-  
-    z-index: 2;
-    width: 1.5rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    top: 0;
-    bottom: 0;
-    margin: auto 0rem;
+  z-index: 2;
+  width: 1.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  margin: auto 0rem;
 }
 
-.pm-error{
-    position: absolute;
-    top: -1rem;
-    font-size: .8rem;
-    color: red;
+.pm-error {
+  position: absolute;
+  top: -1rem;
+  font-size: 0.8rem;
+  color: red;
 }
+
+.block h3 {
+  color: var(--main-color);
+}
+
+.boxes {
+  width: 100%;
+  height: 300px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 1rem;
+  column-gap: 1rem;
+  margin: 1rem 0rem;
+}
+.box {
+  border-radius: 10px;
+  position: relative;
+}
+
+.box h4 {
+  bottom: 1rem;
+  width: 50%;
+  border: 3px solid var(--main-color);
+  border-radius: 100px;
+  position: absolute;
+  text-align: center;
+  right: 0;
+  left: 0;
+  margin: 0rem auto;
+  background: white;
+}
+
+.box-1-img {
+  background: url(../../images/book.png) no-repeat center center/contain;
+  width: 100%;
+  height: 100%;
+}
+.box-2-img {
+  background: url(../../images/food.png) no-repeat center center/contain;
+  width: 100%;
+  height: 100%;
+}
+.box-3-img {
+  background: url(../../images/toys.png) no-repeat center center/contain;
+
+  width: 100%;
+  height: 100%;
+}
+.box-4-img {
+  background: url(../../images/uniform.png) no-repeat center center/contain;
+  width: 100%;
+  height: 100%;
+}
+
+.success-check i{
+    color: var(--green-color);
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
