--- a/client/src/component/Page-contact-us/ContactGrid.css
+++ b/client/src/component/Page-contact-us/ContactGrid.css
@@ -1,4 +1,20 @@
-.error-handler{
-     border: 1px solid red !important;
-     box-shadow: 0px 0px 3px rgba(255, 0, 0, 0.685);
+.error-handler {
+  border: 1px solid red !important;
+  box-shadow: 0px 0px 3px rgba(255, 0, 0, 0.685);
+}
+.input-style {
+  position: relative !important;
+}
+.success-msg {
+  display: absolute;
+  top: 0;
+  background-color: var(--green-color);
+  border: 1px solid var(--green-color);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 0rem;
+  transition: all .3s ease-in-out;
+  margin-bottom: .3rem;
 }
