Fixed bug on Navigation links

--- a/client/src/Mobile.css
+++ b/client/src/Mobile.css
@@ -31,6 +31,9 @@
   .content-box-container {
     grid-template-columns: 1.3fr 1.5fr !important;
   }
+  .our-mission {
+    padding-top: 3rem !important;
+  }
   .mission-box-img {
     display: block !important;
   }
