--- a/client/src/component/Showcase/Showcase.css
+++ b/client/src/component/Showcase/Showcase.css
@@ -8,7 +8,7 @@
   position: relative;
   z-index: 0;
   margin-top: var(--nav-height);
-  background: url(../../images/showcaseimg.jpg) no-repeat center center / cover;
+  background: url(../../images/showcaseimg2.jpg) no-repeat center center / cover;
 }
 .showcase-img {
   position: absolute;  
